src/objects/DOAConditions__c.object
<CustomObject>
    <fields>
        <fullName>Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agreement</label>
        <referenceTo>Agreement__c</referenceTo>
        <relationshipLabel>DOA Conditions</relationshipLabel>
        <relationshipName>DOAConditions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ComplianceDate__c</fullName>
        <label>Compliance Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ComplianceStatus__c</fullName>
        <label>Compliance Status</label>
        <picklist>
            <picklistValues>
                <fullName>TBD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compliant</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DOAApprovalRequest__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DOA Approval Request</label>
        <referenceTo>DOAApprovalRequest__c</referenceTo>
        <relationshipLabel>DOA Conditions (DOA Approval Request)</relationshipLabel>
        <relationshipName>DOAConditions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DOARegister__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DOA Register</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>DOARegister__c.DOAApprovalRequest__c</field>
                <operation>equals</operation>
                <valueField>$Source.DOAApprovalRequest__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>DOARegister__c</referenceTo>
        <relationshipLabel>DOA Conditions</relationshipLabel>
        <relationshipName>DOAConditions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DoATriggerNo__c</fullName>
        <label>DoA Trigger No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mitigation_Plan__c</fullName>
        <label>Mitigation Plan</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>DOA Conditions</relationshipLabel>
        <relationshipName>DOAConditions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TriggerDescription__c</fullName>
        <label>Trigger Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>DOA Condition</label>
    <nameField>
        <label>Condition</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DOA Conditions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>